--- a/src/html/layouts/application.html
+++ b/src/html/layouts/application.html
@@ -5,6 +5,15 @@
     <meta charset="utf-8">
     <title>{% block title %}{{ title }}{% endblock %}</title>
     <link rel="stylesheet" href="stylesheets/app.css">
+    <link rel="stylesheet" href="stylesheets/app.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+      <script src="javascripts/jquery-3.3.1.js"></script>
+      <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+      <script src="javascripts/myplagin.js"></script>
+    <link rel="stylesheet" href="stylesheets/bootstrap.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% include "shared/app-icons.html" %}
     {% block head %}{% endblock %}
